tests/titback/exec_failure_file_stderr.txt
  File "invalid.py", line 1
    invalid Python code
            ^^^^^^
SyntaxError: invalid syntax
